@@ -76,6 +76,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       In dag_findalldevs() handle known errors better.
       Trust dag_get_stream_erf_types() to be available.
       Require the API to have 64-bit streams support.
+      Make device descriptions more useful, make dagN conditional.
 
 DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
   Summary for 1.10.6 libpcap release (so far!)
